--- a/templates/stream.html
+++ b/templates/stream.html
@@ -78,7 +78,8 @@
         <div class="row">
             <div class="col-md-8 offset-md-2">
                 <video controls width="100%">
-                    <source src="{{ url_for('static', filename=link) }}" type="video/mp4">
+                    <!--<source src="{{ url_for('static', filename=link) }}" type="video/mp4">-->
+                    <source src="https://drive.google.com/file/d/1arW5dMlWUFMDDHpianxLMVToy-R9PcxQ/view?usp=drive_link" type="video/mp4">
                     Il tuo browser non supporta la riproduzione video.
                 </video>
             </div>
